--- a/src/index.css
+++ b/src/index.css
@@ -23,3 +23,15 @@ code {
 .flex-grow{
   flex: 1 1 0px;
 }
+
+.nav-item{
+  text-decoration: none;
+}
+
+.nav-item:hover{
+  text-decoration: underline;
+}
+
+.nav-item.selected{
+  text-decoration: underline;
+}
