implement person menu dropdown for authenticated and unauthenticated user,  remove login dialog

--- a/src/index.css
+++ b/src/index.css
@@ -42,3 +42,11 @@ code {
 .nav-item.selected{
   text-decoration: underline;
 }
+
+.popover{
+  pointer-events: none;
+}
+
+.popover-content{
+  pointer-events: auto;
+}
