implement carousel, top categories, featured products to homepage

--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@ code {
 .img-contain{
   object-fit: contain;
   width:100%;
+  min-height: 300px;
   max-width: 300px;
   max-height: 300px;
   height:100%;
