--- a/src/index.css
+++ b/src/index.css
@@ -22,10 +22,13 @@ code {
 .img-contain{
   object-fit: contain;
   width:100%;
+  height:100%;
+}
+
+.img-300{
   min-height: 300px;
   max-width: 300px;
   max-height: 300px;
-  height:100%;
 }
 
 .flex-grow{
